--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head>
         <title>Piss</title>
         <h1>Under Development</h1>
-        <p1>Welcome to <bunkerexplorer class="com"></bunkerexplorer></p1>
+        <p1>Welcome to my webpage.</p1>
     </head>
 </html>
