--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Bunker Explorer</title>
 
         <h1>Under Development</h1>
+        <p>Welcome to my webpage.</p>
 
     </head>
 
