--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <title>Bunker Explorer</title>
 
-        <h1 style="font-family: 'Times New Roman', Times, serif;">Under Development</h1>
+        <h1 style="font-family: sans-serif;">Under Development</h1>
 
         <p>Welcome to my webpage.</p>
 
