--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
         <title>Bunker Explorer</title>
 
-        <h1 style="font-family: sans-serif;">Under Development</h1>
+        <h1 style="font-family: sans-serif;", style="text-align: center;">Under Development</h1>
 
-        <p>Welcome to my webpage.</p>
+        <p style="font-family: sans-serif;", style="text-align: center;">Welcome to my webpage.</p>
 
     </head>
 
