--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 
     <head>
 
+        <style>
+                p{
+                    font-family: sans-serif;
+                }
+        </style>
+
         <link rel="icon" href="assets/images/icon.png">
 
         <title>Bunker Explorer</title>
 
-        <h1 style="font-family: sans-serif;", style="text-align: center;">Under Development</h1>
+        <h1>Under Development</h1>
 
-        <p style="font-family: sans-serif;", style="text-align: center;">Welcome to my webpage.</p>
+        <p>Welcome to my webpage.</p>
 
     </head>
 
