--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
     <head>
 
         <style>
+                h1{
+                    font-family: sans-serif;
+                    text-align: center;
+                }
+
                 p{
                     font-family: sans-serif;
+                    text-align: center;
                 }
         </style>
 
