--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html lang="en">
 
     <head>
-
+        
         <style>
+                body{
+                    background-color: salmon;
+                }
+
                 h1{
                     font-family: sans-serif;
                     text-align: center;
