--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
 
         <title>Bunker Explorer</title>
 
+    </head>
+
+    <body>
+
         <h1>Under Development</h1>
 
-        <p>Welcome to my webpage.</p>
+        <p>Welcome to my webpage. I will be experimenting with <span>HTML5</span> and <span>CSS</span> here.</p>
 
-    </head>
+    </body>
 
 </html>
