--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
                 }
 
                 h1{
+                    border: 2px solid black;
+                    margin: 20px;
+                    padding: 20px;
                     font-family: sans-serif;
                     text-align: center;
                 }
@@ -28,7 +31,7 @@
 
         <h1>Under Development</h1>
 
-        <p>Welcome to my webpage. I will be experimenting with <span>HTML5</span> and <span>CSS</span> here.</p>
+        <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
 
     </body>
 
