--- a/index.html
+++ b/index.html
@@ -3,14 +3,12 @@
     <head>
         
         <style>
+
                 body{
                     background-color: salmon;
                 }
 
                 h1{
-                    border: 2px solid black;
-                    margin: 20px;
-                    padding: 20px;
                     font-family: sans-serif;
                     text-align: center;
                 }
@@ -19,6 +17,15 @@
                     font-family: sans-serif;
                     text-align: center;
                 }
+
+                .test {
+                    background-color: tomato;
+                    color: white;
+                    border: 2px solid black;
+                    margin: 20px;
+                    padding: 20px;
+                }
+
         </style>
 
         <link rel="icon" href="assets/images/icon.png">
@@ -32,6 +39,11 @@
         <h1>Under Development</h1>
 
         <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
+
+        <div class="test">
+            <h2>Tokyo</h2>
+            <p>Tokyo is the capital of Japan.</p>
+        </div>
 
     </body>
 
