--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     background-color: tomato;
                     color: white;
                     border: 2px solid black;
-                    margin: 2px;
-                    padding: 200px;
+                    margin: auto;
+                    padding: 2000px;
                 }
 
         </style>
