--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     color: white;
                     border: 2px solid black;
                     margin: auto;
-                    padding: 2000px;
+                    padding: auto;
                 }
 
         </style>
