--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
                 .test {
                     background-color: tomato;
-                    color: white;
-                    border: 2px solid black;
-                    margin: auto;
-                    padding: auto;
+                    height:100px;	/*controls the height of the space*/
+                    padding:1%;	/*controls the spacing around the interior of the space*/
+                    margin-bottom:1%;	/*controls the spacing around the exterior of the bottom of the space*/
+                    text-align:center;	/*controls the alignment of text or even images!*/
+                    background-color: #556B2F;	/*controls the background color of the space*/
                 }
 
         </style>
