--- a/index.html
+++ b/index.html
@@ -24,8 +24,16 @@
                     padding:1%;	/*controls the spacing around the interior of the space*/
                     margin-bottom:1%;	/*controls the spacing around the exterior of the bottom of the space*/
                     text-align:center;	/*controls the alignment of text or even images!*/
-                    background-color: #556B2F;	/*controls the background color of the space*/
+                    border: 2px solid black;
+                    border-radius: 5px;
                 }
+
+                footer{
+                    padding-top:2%;
+                    height:100px; 
+                    text-align:center;
+                    background-color:#556B2F; 
+			    }
 
         </style>
 
