--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
                 .test {
                     background-color: tomato;
-                    height:100px;	/*controls the height of the space*/
-                    padding:75%;	/*controls the spacing around the interior of the space*/
+                    height: 200px;
+                    width: 50%;
+                    padding:2%;	/*controls the spacing around the interior of the space*/
                     text-align:center;	/*controls the alignment of text or even images!*/
                     border: 2px solid black;
                     border-radius: 5px;
