--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
                     text-align: center;
                 }
 
+                h1{
+                    font-family: sans-serif;
+                    text-align: center;
+                }
+
                 p{
                     font-family: sans-serif;
                     text-align: center;
@@ -22,7 +27,7 @@
                     background-color: tomato;
                     height: 200px;
                     width: 20%;
-                    padding:50%;	/*controls the spacing around the interior of the space*/
+                    padding:5%;	/*controls the spacing around the interior of the space*/
                     text-align:center;	/*controls the alignment of text or even images!*/
                     border: 2px solid black;
                     border-radius: 5px;
