--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
                     text-align:center;	/*controls the alignment of text or even images!*/
                     border: 2px solid black;
                     border-radius: 5px;
-                    align-content: center;
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
                 }
 
                 footer{
