--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                 .test {
                     background-color: tomato;
-                    height: 200px;
+                    height: 150px;
                     width: 20%;
                     padding:5%;	/*controls the spacing around the interior of the space*/
                     text-align:center;	/*controls the alignment of text or even images!*/
@@ -36,12 +36,11 @@
                     margin-right: auto;
                 }
 
-                footer{
-                    padding-top:2%;
-                    height:100px; 
-                    text-align:center;
-                    background-color:#556B2F; 
-			    }
+                img {
+                    display: block;
+                    margin-left: auto;
+                    margin-right: auto;
+                }
 
         </style>
 
@@ -58,8 +57,9 @@
         <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
 
         <div class="test">
-            <h2>Tokyo</h2>
-            <p>Tokyo is the capital of Japan.</p>
+            <h2>Sandman Incident</h2>
+            <p>4/28/2018</p>
+            <img src="assets/images/sandman.png", width="400", height="572", alt="imposter" class="center">
         </div>
 
     </body>
