--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     margin-left: auto;
                     margin-right: auto;
                 }
-                
+
         </style>
 
         <link rel="icon" href="assets/images/icon.png">
@@ -53,7 +53,7 @@
         <div class="test">
             <h2>Sandman Incident</h2>
             <p>4/28/2018</p>
-            <img src="assets/images/sandman.png", width="400", height="572", alt="imposter" class="center">
+            <img src="assets/images/sandman.png", width="1324", height="848", alt="sandmaninc" class="center">
         </div>
 
     </body>
