--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
         <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
 
         <div class="test">
-            <h2>Sandman Incident</h2>
-            <p>4/28/2018</p>
-            <img src="assets/images/sandman.png", width="1324", height="848", alt="sandmaninc" class="center">
+            <h2>Sussy Imposter Below?</h2>
+            <p>Among us WTF!! \/</p>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">YOU WON'T BELIEVE THIS!</a>
         </div>
 
     </body>
