--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                     text-align: center;
                 }
 
+                a{
+                    font-family: sans-serif;
+                    text-align: center;
+                }
+
                 .test {
                     background-color: tomato;
                     height: 150px;
