--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="test">
             <h2>Sussy Imposter Below?</h2>
             <p>Among us WTF!! \/</p>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">YOU WON'T BELIEVE THIS!</a>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><b>YOU WON'T BELIEVE THIS!</b></a>
         </div>
 
     </body>
