--- a/index.html
+++ b/index.html
@@ -5,36 +5,44 @@
         <style>
 
                 body{
-                    background-color: salmon;
+                    background-color: darkgray;
                 }
 
                 h1{
                     font-family: sans-serif;
                     text-align: center;
+                    color: azure;
+                    font-size: 3em;
                 }
 
                 h2{
                     font-family: sans-serif;
                     text-align: center;
+                    color: azure;
+                    font-size: 2em;
                 }
 
                 p{
                     font-family: sans-serif;
                     text-align: center;
+                    color: azure;
+                    font-size: 1.5em;
                 }
 
                 a{
                     font-family: sans-serif;
                     text-align: center;
+                    color: azure;
+                    font-size: 1.5em;
                 }
 
                 .test {
-                    background-color: tomato;
+                    background-color: black;
                     height: 150px;
                     width: 20%;
                     padding:5%;	/*controls the spacing around the interior of the space*/
                     text-align:center;	/*controls the alignment of text or even images!*/
-                    border: 2px solid black;
+                    border: 2px solid white;
                     border-radius: 5px;
                     display: block;
                     margin-left: auto;
