--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <style>
 
                 body{
-                    background-color: darkgray;
+                    background-color: rgb(41, 37, 37);
                 }
 
                 h1{
@@ -68,6 +68,10 @@
             <p>Among us WTF!! \/</p>
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><b>YOU WON'T BELIEVE THIS!</b></a>
         </div>
+
+        <foot>
+            <h4 style= "color:white;">&copy;2020-2021 Bunker explorer 2000. All Rights Reserved.</h4>
+        </foot>
 
     </body>
 
