--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
 
         <foot>
-            <h4 style= "color:white;">&copy;2020-2021 Bunker explorer 2000. All Rights Reserved.</h4>
+            <h4 style= "color:white;">&copy;2021 Bunker explorer 2000. All Rights Reserved.</h4>
         </foot>
 
     </body>
