--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
                     font-size: 2em;
                 }
 
+                h4{
+                    font-family: sans-serif;
+                    text-align: center;
+                    color: azure;
+                    font-size: auto;
+                }
+
                 p{
                     font-family: sans-serif;
                     text-align: center;
