--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     font-family: sans-serif;
                     text-align: center;
                     color: azure;
-                    font-size: 2em;
+                    font-size: 1em;
                 }
 
                 h4{
@@ -33,14 +33,14 @@
                     font-family: sans-serif;
                     text-align: center;
                     color: azure;
-                    font-size: 1.5em;
+                    font-size: auto;
                 }
 
                 a{
                     font-family: sans-serif;
                     text-align: center;
                     color: azure;
-                    font-size: 1.5em;
+                    font-size: 1em;
                 }
 
                 .test {
