--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
 
         </style>
 
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
+
         <link rel="icon" href="assets/images/icon.png">
 
         <title>Bunker Explorer</title>
