--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <foot>
-            <h4 style= "color:white;">&copy;2021 Bunker explorer 2000. All Rights Reserved.</h4>
+            <h4 style= "color:white;">Bunker explorer 2000#7500</h4>
         </foot>
 
     </body>
