--- a/index.html
+++ b/index.html
@@ -2,61 +2,31 @@
 
     <head>
         
+        <!--STYLING BELOW-->
         <style>
-
-                body{
-                    background-color: rgb(41, 37, 37);
-                }
-
-                h1{
-                    font-family: sans-serif;
-                    text-align: center;
-                    color: azure;
-                    font-size: 3em;
-                }
-
-                h2{
-                    font-family: sans-serif;
-                    text-align: center;
-                    color: azure;
-                    font-size: 1em;
-                }
-
-                h4{
-                    font-family: sans-serif;
-                    text-align: center;
-                    color: azure;
-                    font-size: auto;
-                }
-
-                p{
-                    font-family: sans-serif;
-                    text-align: center;
-                    color: azure;
-                    font-size: auto;
-                }
-
-                a{
-                    font-family: sans-serif;
-                    text-align: center;
-                    color: azure;
-                    font-size: 1em;
-                }
-
-                .test {
-                    background-color: black;
-                    height: 150px;
-                    width: 20%;
-                    padding:5%;	/*controls the spacing around the interior of the space*/
-                    text-align:center;	/*controls the alignment of text or even images!*/
-                    border: 2px solid white;
-                    border-radius: 5px;
-                    display: block;
-                    margin-left: auto;
-                    margin-right: auto;
-                }
-
+            body{
+                background-color: rgb(41, 37, 37)
+            }
+            h1{
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                color: white;
+            }
+            p{
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+                color: white;
+            }
+            .header{
+                padding: 5px;
+                text-align: center;
+                background: black;
+                color: white;
+                font-size: 125%;
+                width: auto;
+                height: 20%;
+                margin: -10 auto;
+            }
         </style>
+        <!--STYLING ABOVE-->
 
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -68,19 +38,10 @@
 
     <body>
 
-        <h1>Under Development</h1>
-
-        <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
-
-        <div class="test">
-            <h2>Sussy Imposter Below?</h2>
-            <p>Among us WTF!! \/</p>
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><b>YOU WON'T BELIEVE THIS!</b></a>
+        <div class="header">
+            <h1 style="text-align: center;">Under Development</h1>
+            <p style="text-align: center;">Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
         </div>
-
-        <foot>
-            <h4 style= "color:white;">Bunker explorer 2000#7500</h4>
-        </foot>
 
     </body>
 
