--- a/index.html
+++ b/index.html
@@ -2,31 +2,7 @@
 
     <head>
         
-        <!--STYLING BELOW-->
-        <style>
-            body{
-                background-color: rgb(41, 37, 37)
-            }
-            h1{
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                color: white;
-            }
-            p{
-                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-                color: white;
-            }
-            .header{
-                padding: 5px;
-                text-align: center;
-                background: black;
-                color: white;
-                font-size: 125%;
-                width: auto;
-                height: 20%;
-                margin: -10 auto;
-            }
-        </style>
-        <!--STYLING ABOVE-->
+        <link rel="stylesheet" href="style.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -37,10 +13,18 @@
     </head>
 
     <body>
-
+        
         <div class="header">
             <h1 style="text-align: center;">Under Development</h1>
             <p style="text-align: center;">Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
+        </div>
+
+        <div class="content">
+            <p>test</p>
+        </div>
+
+        <div class="footer">
+            <p>Bunker explorer 2000#7500</p>
         </div>
 
     </body>
