--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
 
         <div class="content">
-            <h3 style="text-align: right;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Enjoy your stay!</a></h3>
+            <h3 style="text-align: center;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Under Development</a></h3>
         </div>
        
     </body>
