--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 style="text-align: left;">Hello, and</h2>
         </div>
 
-        <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.</p>
+        <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.Welcome to my webpage.</p>
 
         <div class="content">
             <h3 style="text-align: center;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Under Development</a></h3>
