--- a/index.html
+++ b/index.html
@@ -14,23 +14,9 @@
 
     <body>
 
-        <div class="header">
-            <h1>Under Development</h1>
-        </div>
-        
-        <div class="content">
-            <h2 style="text-align: left;">Hello, and</h2>
-        </div>
-
-        <p>Welcome to my webpage. I will be experimenting with HTML5 and CSS here.Welcome to my webpage.</p>
-
-        <div class="content">
-            <h3 style="text-align: center;"><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">Under Development</a></h3>
-        </div>
-       
-        <div class="footer">
-            <p>Bunker explorer 2000#7500</p>
-        </div>
+        <h1>404</h1>
+        <p>Page not found.</p>
+        <img src="assets/images/404.png" alt="Page not found: 404">
 
     </body>
 
