--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
     <head>
         
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="index.css">
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -15,7 +15,7 @@
     <body>
 
 
-        
+
     </body>
 
 </html>
