--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         
         <link rel="stylesheet" href="index.css">
 
+        <meta charset="UTF-8">
+
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
         <link rel="icon" href="assets/images/icon.png">
@@ -12,9 +14,11 @@
 
     </head>
 
+    <header>
+        <h1>Bunker <span>Explorer</span></h1>
+    </header>
+
     <body>
-
-
 
     </body>
 
