--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <body>
 
-        <p>Test</p>
+        <p style="font-size: 2.5em;">Under Development</p>
+        <p style="font-size: 1.5em;">Weclcome to my webpage, where I'm mostly going to be experimenting with HTML5 and CSS.</p>
 
     </body>
 
