--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
         <p style="font-size: 2.5em;">Under Development</p>
         <p style="font-size: 1.5em;">Weclcome to my webpage, where I'm mostly going to be experimenting with HTML5 and CSS.</p>
 
+        <div class="footer">
+            <p>Bunker explorer 2000#7500</p>
+        </div>
+
     </body>
 
 </html>
