Rows and columns added for testing and future purposes
Rows and columns added for testing and future purposes

--- a/index.html
+++ b/index.html
@@ -26,11 +26,30 @@
     <body>
 
         <p style="font-size: 2.5em;">Under Development</p>
-        <p style="font-size: 1.5em;">Weclcome to my webpage, where I'm mostly going to be experimenting with HTML5 and CSS.</p>
+        <p style="font-size: 1.5em;">Weclcome to my webpage, where I'm mostly</p>
+        <p style="font-size: 1.5em;">going to be experimenting with HTML5 and CSS.</p>
 
         <div class="footer">
-            <p style="opacity: .1;">Bunker explorer 2000#7500</p>
+            <p style="opacity: .1;"><i>Bunker explorer 2000#7500</i></p>
         </div>
+        
+
+        <!-- IMAGES IN A ROW INSIDE OF COLUMNS -->
+
+        <div class="row">
+            <div class="column">
+              <img src="assets/images/image1.png" alt="image1" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="assets/images/image2.png" alt="image2" style="width:100%">
+            </div>
+            <div class="column">
+              <img src="assets/images/image3.png" alt="image3" style="width:100%">
+            </div>
+            <div class="column">
+                <img src="assets/images/image4.png" alt="image4" style="width: 100%;">
+            </div>
+          </div>
 
     </body>
 
