--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-        <link rel="icon" href="assets/images/icon.png">
+        <link rel="icon" href="assets/images/icon.ico">
 
         <title>Bunker Explorer</title>
 
     </head>
 
     <header>
+
+        <div class="logo"><img src="assets/images/logo.png" title="Circus camera I found online and am now using as a profile image. (temp for now)" width="7%" style="display:inline;"/></div>
+
         <h1>Bunker <span>Explorer</span></h1>
         <nav>
             <ul>
@@ -60,7 +63,7 @@
 
           <p style="padding: 5%;">My very own, custom made Trollge incident. How do you like it?</p>
 
-          <p style="padding: 10%;">Here's my <a href="https://github.com/bunkerexplorer2000/bunkerexplorer" style="font-size: 1em; text-decoration: underline;">Github Repository</a> for this project.</p>
+          <p style="padding: 10%;">Here's my <a href="https://github.com/bunkerexplorer2000/bunkerexplorer" style="font-size: 1em; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Github Repository</a> for this project.</p>
 
     </body>
 
