--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="showcase.html">Showcase</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
@@ -41,27 +43,22 @@
 
         <div class="row">
             <div class="column">
+                <img src="assets/images/blank.png" alt="image4" style="width: 100%;">
+            </div>
+            <div class="column">
               <img src="assets/images/image1.png" alt="image1" style="width:100%">
-              <p>"Time to go hiking through this </p>
-              <p>large and expansive desert!"</p>
+              <p>Check out my work under the </p>
+              <p><a href="showcase.html" style="font-size: 1em; text-decoration: underline;">Showcase</a> tab of the website.</p>
             </div>
             <div class="column">
-              <img src="assets/images/image2.png" alt="image2" style="width:100%">
-              <p>"I'm now lost, where will I go?</p>
-              <p> Will I die out here?"</p>
+              <img src="assets/images/question.jpg" alt="image2" style="width:81.5%">
+              <p>Questions or concerns? Check out the </p>
+              <p><a href="about.html" style="font-size: 1em; text-decoration: underline;">About</a> page for more information.</p>
             </div>
             <div class="column">
-              <img src="assets/images/image3.png" alt="image3" style="width:100%">
-              <p>"Goodbye, cruel world. I will now </p>
-              <p>let the sand consume me."</p>
-            </div>
-            <div class="column">
-                <img src="assets/images/image4.png" alt="image4" style="width: 100%;">
-                <p><i>The Sandman incident, 04/28/2018</i></p>
+                <img src="assets/images/blank.png" alt="image4" style="width: 100%;">
             </div>
           </div>
-
-          <p style="padding: 5%;">My very own, custom made Trollge incident. How do you like it?</p>
 
           <p style="padding: 10%;">Here's my <a href="https://github.com/bunkerexplorer2000/bunkerexplorer" style="font-size: 1em; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Github Repository</a> for this project.</p>
 
