--- a/showcase.html
+++ b/showcase.html
@@ -33,7 +33,7 @@
         <p style="font-size: 2.5em;">Showcase</p>
         <p style="font-size: 1.5em;">Here is where I will likely showcase my work,</p>
         <p style="font-size: 1.5em;">whether its scripts, photoshop or something else.</p>
-        <p style="font-size: 1.5em;">!UNDER CONSTRUCTION!</p>
+        <p style="font-size: 1.5em;">Scroll Down</p>
 
         <div class="footer">
             <p style="opacity: .1;"><i>Bunker explorer 2000#7500</i></p>
@@ -65,6 +65,28 @@
           </div>
 
           <p style="padding: 5%;">My very own, custom made Trollge incident. How do you like it?</p>
+
+          <div class="row">
+            <div class="column">
+              <img src="assets/images/showcase stuff/doggodzilla.png" alt="image1" style="width:100%">
+              <p>My dog as Godzilla in Tokyo.</p>
+            </div>
+            <div class="column">
+                <img src="assets/images/showcase stuff/condoms.png" alt="image1" style="width:100%; height: 85%;">
+                <p>McDonalds sign mixed around to say "condoms".</p>
+            </div>
+            <div class="column">
+                <img src="assets/images/showcase stuff/skull.png" alt="image1" style="width:100%">
+                <p>A cool skull that I put put mushrooms inside of </p>
+                <p>and then put that skull in a forest.</p>
+            </div>
+            <div class="column">
+                <img src="assets/images/showcase stuff/susimposter.png" alt="image1" style="width:100%">
+                <p>Among us imposter with troll face. (Extra sus)</p>
+            </div>
+          </div>
+
+          <p style="padding: 5%;">Some extra small photoshops that I've done.</p>
 
           <p style="padding: 10%;">Here's my <a href="https://github.com/bunkerexplorer2000/bunkerexplorer" style="font-size: 1em; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Github Repository</a> for this project.</p>
 
