wiped website again because i felt like it
wiped website again because i felt like it

--- a/index.html
+++ b/index.html
@@ -14,53 +14,11 @@
 
     </head>
 
-    <header>
-
-        <div class="logo"><img src="assets/images/logo.png" title="Circus camera I found online and am now using as a profile image. (temp for now)" width="7%" style="display:inline;"/></div>
-
-        <h1>Bunker <span>Explorer</span></h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="showcase.html">Showcase</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
-    </header>
-
     <body>
 
-        <p style="font-size: 2.5em;">Under Development</p>
-        <p style="font-size: 1.5em;">Weclcome to my webpage, where I'm mostly</p>
-        <p style="font-size: 1.5em;">going to be experimenting with HTML5 and CSS.</p>
-
-        <div class="footer">
-            <p style="opacity: .1;"><i>Bunker explorer 2000#7500</i></p>
-        </div>
-        
-
-        <!-- IMAGES IN A ROW INSIDE OF COLUMNS -->
-
-        <div class="row">
-            <div class="column">
-                <img src="assets/images/blank.png" alt="image4" style="width: 100%;">
-            </div>
-            <div class="column">
-              <img src="assets/images/image1.png" alt="image1" style="width:100%">
-              <p>Check out my work under the </p>
-              <p><a href="showcase.html" style="font-size: 1em; text-decoration: underline;">Showcase</a> tab of the website.</p>
-            </div>
-            <div class="column">
-              <img src="assets/images/question.jpg" alt="image2" style="width:81.5%">
-              <p>Questions or concerns? Check out the </p>
-              <p><a href="about.html" style="font-size: 1em; text-decoration: underline;">About</a> page for more information.</p>
-            </div>
-            <div class="column">
-                <img src="assets/images/blank.png" alt="image4" style="width: 100%;">
-            </div>
-          </div>
-
-          <p style="padding: 10%;">Here's my <a href="https://github.com/bunkerexplorer2000/bunkerexplorer" style="font-size: 1em; text-decoration: underline;" target="_blank" rel="noopener noreferrer">Github Repository</a> for this project.</p>
+        <h1>momentarily empty</h1>
+        <img src="assets/images/cat.gif">
+        <h1 style="margin-top: 1%;">loading content</h1>
 
     </body>
 
