--- a/index.html
+++ b/index.html
@@ -21,54 +21,113 @@
         <!-- <h1>momentarily empty</h1>
         <img src="assets/images/cat.gif">
         <h1 style="margin-top: 1.3%;">loading content</h1> -->
+        
+        <div class="sectionLeft">
+            <center>
+                <div class="scoreContainer">
+                    <p>🍃 Nutrients: <span id="nutrients">0</span></p>
+                    <p>🐜 Ant Income: <span id="nutrientsper">0</span></p>
+                </div>
+                <br>
+                <div class="clickerContainer">
+                    <img src="assets/images/ant.png" style="width: 256; height: 256;" onclick="addToNutrients(clickingPower)">
+                </div>
+            </center>
+        </div>
 
-        <p>🍃 Nutrients: <span id="score">0</span></p>
-        <img src="assets/images/ant.png" style="width: 256; height: 256;" onclick="addToScore(1)">
-
-        <button onclick="buyWorker()">Worker [🍃<span id="workercost">15</span>] -- <span id="workers">0</span></button>
-        <button onclick="buySoldier()">Soldier [🍃<span id="soldiercost">100</span>] -- <span id="soldiers">0</span></button>
+        <div class="sectionRight">
+            <table class="shopButton" onclick="buyMiWorker()">
+                <tr>
+                    <td id="image"><img src="assets/images/minor.png"></td>
+                    <td id="nameAndCost">
+                        <p>Minor Worker</p>
+                        <p>🍃<span id="miworkercost">15</span></p>
+                    </td>
+                    <td id="amount"><span id="miworkers">0</span></td>
+                </tr>
+            </table>
+            <table class="shopButton" onclick="buyMaWorker()">
+                <tr>
+                    <td id="image"><img src="assets/images/major.png"></td>
+                    <td id="nameAndCost">
+                        <p>Major Worker</p>
+                        <p>🍃<span id="maworkercost">100</span></p>
+                    </td>
+                    <td id="amount"><span id="maworkers">0</span></td>
+                </tr>
+            </table><table class="shopButton" onclick="buySoldier()">
+                <tr>
+                    <td id="image"><img src="assets/images/soldier.png"></td>
+                    <td id="nameAndCost">
+                        <p>Soldier</p>
+                        <p>🍃<span id="soldiercost">100</span></p>
+                    </td>
+                    <td id="amount"><span id="soldiers">0</span></td>
+                </tr>
+            </table>
+        </div>
 
         <script>
-            var score = 0;
+            var nutrients = 0;
+            var nutrientsper = 0;
 
-            var workercost = 15;
-            var workers = 0;
-            var soldiercost = 100;
+            var clickingPower = 1;
+
+            var miworkercost = 15;
+            var miworkers = 0;
+            var maworkercost = 100;
+            var maworkers = 0;
+            var soldiercost = 500;
             var soldiers = 0;
 
-            function buyWorker(){
-                if (score >= workercost) {
-                    score = score - workercost;
-                    workers = workers + 1;
-                    workercost = Math.round(workercost * 1.15);
+            function buyMiWorker(){
+                if (nutrients >= miworkercost) {
+                    nutrients = nutrients - miworkercost;
+                    miworkers = miworkers + 1;
+                    miworkercost = Math.round(miworkercost * 1.15);
 
-                    document.getElementById("score").innerHTML = score;
-                    document.getElementById("workercost").innerHTML = workercost;
-                    document.getElementById("workers").innerHTML = workers;
+                    document.getElementById("nutrients").innerHTML = nutrients;
+                    document.getElementById("miworkercost").innerHTML = miworkercost;
+                    document.getElementById("miworkers").innerHTML = miworkers;
+                }
+            }
+
+            function buyMaWorker(){
+                if (nutrients >= maworkercost) {
+                    nutrients = nutrients - maworkercost;
+                    maworkers = maworkers + 1;
+                    maworkercost = Math.round(maworkercost * 1.50);
+
+                    document.getElementById("nutrients").innerHTML = nutrients;
+                    document.getElementById("maworkercost").innerHTML = maworkercost;
+                    document.getElementById("maworkers").innerHTML = maworkers;
                 }
             }
 
             function buySoldier(){
-                if (score >= soldiercost) {
-                    score = score - soldiercost;
+                if (nutrients >= soldiercost) {
+                    nutrients = nutrients - soldiercost;
                     soldiers = soldiers + 1;
-                    soldiercost = Math.round(soldiercost * 1.50);
+                    soldiercost = Math.round(soldiercost * 1.75);
 
-                    document.getElementById("score").innerHTML = score;
+                    document.getElementById("nutrients").innerHTML = nutrients;
                     document.getElementById("soldiercost").innerHTML = soldiercost;
                     document.getElementById("soldiers").innerHTML = soldiers;
                 }
             }
 
-            function addToScore(amount) {
-                score = score + amount;
-                document.getElementById("score").innerHTML = score;
+            function addToNutrients(amount) {
+                nutrients = nutrients + amount;
+                document.getElementById("nutrients").innerHTML = nutrients;
             }
 
             setInterval(function() {
-                score = score + workers;
-                score = score + soldiers * 2;
-                document.getElementById("score").innerHTML = score;
+                nutrients = nutrients + miworkers;
+                nutrients = nutrients + maworkers * 1.5;
+                nutrients = nutrients + soldiers * 2;
+                nutrientsper = miworkers + maworkers * 1.5 + soldiers * 2; // all the intervals combined to say what ur score per second is! //
+                document.getElementById("nutrients").innerHTML = nutrients;
+                document.getElementById("nutrientsper").innerHTML = nutrientsper;
             }, 1000); //1000 ms = 1 second
         </script>
 
