--- a/404.html
+++ b/404.html
@@ -18,10 +18,11 @@
 
     <body>
 
-        <h1>momentarily empty</h1>
-        <img src="assets/images/cat.gif">
-        <h1 style="margin-top: 1.3%;">loading content</h1>
-        
+        <div class="not404">
+            <h1>momentarily empty</h1>
+            <img src="assets/images/cat.gif">
+            <h1 style="margin-top: 1.3%;">loading content</h1>
+        </div>
 
     </body>
 
