--- a/404.html
+++ b/404.html
@@ -18,9 +18,13 @@
 
     <body>
 
-        <div class="not404">
+        <div class="text404">
             <h1>momentarily empty</h1>
+        </div>
+        <div class="img404">
             <img src="assets/images/cat.gif">
+        </div>
+        <div class="text404">
             <h1 style="margin-top: 1.3%;">loading content</h1>
         </div>
 
