--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
 
     <body>
 
+        <p>under dev</p>
+
         <!-- <h1>momentarily empty</h1>
         <img src="assets/images/cat.gif">
         <h1 style="margin-top: 1.3%;">loading content</h1> -->
         
-        <div class="sectionLeft">
+        <!-- <div class="sectionLeft">
             <center>
                 <div class="scoreContainer unselectable">
                     <p>🍃 Nutrients: <span id="nutrients">0</span></p>
@@ -69,7 +71,7 @@
                     <td id="amount"><span id="soldiers">0</span></td>
                 </tr>
             </table>
-        </div>
+        </div> -->
 
         <script>
             var nutrients = 0;
