--- a/index.html
+++ b/index.html
@@ -18,13 +18,11 @@
 
     <body>
 
-        <p>under dev</p>
-
         <!-- <h1>momentarily empty</h1>
         <img src="assets/images/cat.gif">
         <h1 style="margin-top: 1.3%;">loading content</h1> -->
         
-        <!-- <div class="sectionLeft">
+        <div class="sectionLeft">
             <center>
                 <div class="scoreContainer unselectable">
                     <p>🍃 Nutrients: <span id="nutrients">0</span></p>
@@ -71,7 +69,7 @@
                     <td id="amount"><span id="soldiers">0</span></td>
                 </tr>
             </table>
-        </div> -->
+        </div>
 
         <script>
             var nutrients = 0;
@@ -80,10 +78,13 @@
             var clickingPower = 1;
 
             var miworkercost = 15;
+            var miworkerincome = 0;
             var miworkers = 0;
             var maworkercost = 100;
+            var maworkerincome = 0;
             var maworkers = 0;
             var soldiercost = 500;
+            var soldierincome = 0;
             var soldiers = 0;
 
             function buyMiWorker(){
@@ -91,6 +92,7 @@
                     nutrients = nutrients - miworkercost;
                     miworkers = miworkers + 1;
                     miworkercost = Math.round(miworkercost * 1.15);
+                    miworkerincome = Math.round(miworkers * 1.15);
 
                     document.getElementById("nutrients").innerHTML = nutrients;
                     document.getElementById("miworkercost").innerHTML = miworkercost;
@@ -103,6 +105,7 @@
                     nutrients = nutrients - maworkercost;
                     maworkers = maworkers + 1;
                     maworkercost = Math.round(maworkercost * 1.50);
+                    maworkerincome = Math.round(maworkers * 1.50);
 
                     document.getElementById("nutrients").innerHTML = nutrients;
                     document.getElementById("maworkercost").innerHTML = maworkercost;
@@ -115,6 +118,7 @@
                     nutrients = nutrients - soldiercost;
                     soldiers = soldiers + 1;
                     soldiercost = Math.round(soldiercost * 1.75);
+                    soldierincome = Math.round(soldiers * 1.75);
 
                     document.getElementById("nutrients").innerHTML = nutrients;
                     document.getElementById("soldiercost").innerHTML = soldiercost;
@@ -128,10 +132,10 @@
             }
 
             setInterval(function() {
-                nutrients = nutrients + miworkers;
-                nutrients = nutrients + maworkers * 1.5;
-                nutrients = nutrients + soldiers * 2;
-                nutrientsper = miworkers + maworkers * 1.5 + soldiers * 2; // all the intervals combined to say what ur score per second is! //
+                nutrients = nutrients + miworkerincome;
+                nutrients = nutrients + maworkerincome;
+                nutrients = nutrients + soldierincome;
+                nutrientsper = miworkerincome + maworkerincome + soldierincome; // all the intervals combined to say what ur score per second is! //
                 document.getElementById("nutrients").innerHTML = nutrients;
                 document.getElementById("nutrientsper").innerHTML = nutrientsper;
             }, 1000); //1000 ms = 1 second
